--- a/ui/static/css/user_feed.css
+++ b/ui/static/css/user_feed.css
@@ -1,7 +1,6 @@
 /* User Feed Custom Card Styles */
 
-body,
-html {
+body, html {
   overflow-x: hidden;
 }
 
@@ -30,9 +29,7 @@ html {
   gap: 1.2em;
   border: none;
   box-sizing: border-box;
-  transition:
-    box-shadow 0.2s,
-    transform 0.2s;
+  transition: box-shadow 0.2s, transform 0.2s;
 }
 
 .post.clickable-post:hover {
@@ -41,16 +38,11 @@ html {
   cursor: pointer;
 }
 
-.post-title,
-.post-header,
-.post-content,
-.post-time,
-.post-reactions {
+.post-title, .post-header, .post-content, .post-time, .post-reactions {
   text-align: left;
 }
 
-.post-title,
-.post-header {
+.post-title, .post-header {
   font-size: 1.3em;
   font-weight: bold;
   margin-bottom: 0.3em;
@@ -105,9 +97,7 @@ html {
   color: var(--color-quaternary);
   text-decoration: none;
   margin-right: 0.5em;
-  transition:
-    color 0.2s,
-    text-decoration 0.2s;
+  transition: color 0.2s, text-decoration 0.2s;
 }
 .post-category-link:hover {
   text-decoration: underline;
@@ -181,23 +171,10 @@ html {
     padding: 1em 0.5em 1em 0.5em;
     border-radius: 10px;
   }
-  .post-title,
-  .post-header {
+  .post-title, .post-header {
     font-size: 1.1em;
   }
   .post-content {
     font-size: 1em;
   }
-}
-#notif-bell {
-  cursor: pointer;
-}
-#notif-bell.has-notif {
-  color: var(--color-warning);
-}
-#notification-list li {
-  margin-bottom: 0.5em;
-}
-#notification-modal .modal-content {
-  flex-direction: column;
-}
+} 
