Add notification badge

--- a/ui/static/templates/user/user_feed.html
+++ b/ui/static/templates/user/user_feed.html
@@ -16,7 +16,10 @@
     <nav class="navbar">
       <a class="navbar-brand" href="/user/feed">Forum</a>
       <ul class="navbar-links">
-        <li><span id="notif-bell" class="notif-bell">🔔</span></li>
+        <li id="notif-item" class="notif-item">
+          <span id="notif-bell" class="notif-bell">🔔</span>
+          <span id="notif-count" class="notif-count hidden"></span>
+        </li>
         <li><a href="#" id="logout-link">Logout</a></li>
       </ul>
     </nav>
