Improve notification modal

--- a/ui/static/templates/user/user_feed.html
+++ b/ui/static/templates/user/user_feed.html
@@ -128,8 +128,8 @@
         <h2>Notifications</h2>
         <div id="notif-list"></div>
         <div class="notif-actions">
-          <button id="mark-all-read">Read All</button>
-          <button id="delete-all">Delete All</button>
+          <button id="mark-all-read" class="btn secondary">Read All</button>
+          <button id="delete-all" class="btn ghost">Delete All</button>
         </div>
       </div>
     </div>
