--- a/ui/static/templates/user/user_feed.html
+++ b/ui/static/templates/user/user_feed.html
@@ -129,7 +129,7 @@
         <div id="notif-list"></div>
         <div class="notif-actions">
           <button id="mark-all-read" class="btn secondary">Read All</button>
-          <button id="delete-all" class="btn ghost">Delete All</button>
+          <button id="clear-all" class="btn ghost">Clear All</button>
         </div>
       </div>
     </div>
